# image-gen-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  pyproject.toml
backend/simple_webapp_k8s/: api.py  conf.py
backend/simple_webapp_k8s/routers/: auth.py  image.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ImageGenerator.tsx  Login.tsx  NavBar.tsx
k8s/: service.yaml
k8s/backend/: deployment.yaml
simple_webapp_k8s/: auth_utils.py
simple_webapp_k8s/routers/: hello.py
