[tool.poetry]
name = "simple_webapp_k8s"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholson <stephen.nicholson1@hotmail.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
requests = "^2.32.3"
gunicorn = "^21.2.0"
uvicorn = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pydantic-settings = "^2.1.0"
bcrypt = "^4.0.1"
huggingface-hub = "^0.27.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
pytest = "^8.3.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
